--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,8 @@
 		"context": ".."
 	},
 	"containerEnv": {
-		"PYTHONDONTWRITEBYTECODE": "1"
+		"PYTHONDONTWRITEBYTECODE": "1",
+		"PYTHONUNBUFFERED": "0"
 	},
 	"extensions": [
 		"ms-python.flake8",
