Made it so iPython always has autoreload enabled.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,10 @@
             "args": [
                 "--no-confirm-exit",
                 "--no-banner",
-                "--pprint"
+                "--pprint",
+                "--ext=autoreload",
+                "-c=%autoreload 2",
+                "-i"
             ]
         },
         "bash": {
